--- a/Julfiker_Portfolio/Views/Home/Index.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Index.cshtml
@@ -13,7 +13,13 @@
 
             <div class="social-icons mt-4">
                 <a href="https://www.linkedin.com/in/md-julfiker-ali-jewel-7b1442a9/" target="_blank" title="LinkedIn" style="color: #0077b5;"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="https://x.com/JewelShaikh2" target="_blank" title="X" style="color: #1DA1F2;"><i class="fab fa-x-twitter fa-2x"></i></a>
+                <a href="https://www.researchgate.net/profile/Md-Julfiker-Ali-Jewel?ev=hdr_xprf" 
+   target="_blank" 
+   title="ResearchGate" 
+   style="color: #00CCBB;">
+   <i class="fab fa-researchgate fa-2x"></i>
+</a>
+
                 <a href="https://github.com/Jewel777" target="_blank" title="GitHub" style="color: #ffffff;"><i class="fab fa-github fa-2x"></i></a>
                 <a href="https://www.youtube.com/%40nongor3694" target="_blank" title="YouTube" style="color: #FF0000;"><i class="fab fa-youtube fa-2x"></i></a>
                 <a href="https://scholar.google.com/citations?user=KYHGDlgAAAAJ" target="_blank" title="Google Scholar" style="color: #4285F4;"><i class="fas fa-graduation-cap fa-2x"></i></a>
